Fix text overflow in login-description

--- a/42-transcendence/client/src/styles/globals.css
+++ b/42-transcendence/client/src/styles/globals.css
@@ -36,8 +36,14 @@ body { /* to change with the home div */
 
 .home-login-content {
   display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(180px,1fr));
+  grid-template-columns: repeat(auto-fit,minmax(500px,1fr));
+  gap: 50px;
+}
 
+.login-game {
+  margin-top: 70px;
+  border: 5px solid white;
+  border-radius: 10px;
 }
 
 .login-description {
@@ -56,7 +62,11 @@ body { /* to change with the home div */
   border-radius: 85px;
   padding: 30px;
   max-width: 691px;
+  min-width: 320px;
+  overflow: hidden;
+ 
 }
+
 
 .welcome-description,#intra-login-button{
   font-weight: 400;
@@ -67,9 +77,7 @@ body { /* to change with the home div */
 
 .welcome-description{
   max-width: 511px;
-  height: 407px;
-  left: 1264px;
-  top: 391px;
+
   line-height: 38px;
   text-align: center;
 }
